--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Graphite Paysage</title>
   <base href="/">
 
+  <meta name="description" content="Graphite paysage est une entreprise proposant des services de rendus 3D, photomontage, ou dessin de vos projets paysage.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
