Ajout SEO settings

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/iconic/font/css/open-iconic-bootstrap.css" >
-  <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/assets/iconic/font/css/open-iconic-bootstrap.css" >
+  <link rel="stylesheet" href="/assets/font-awesome-4.7.0/css/font-awesome.min.css">
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "http://www.graphite-paysage.fr",
+      "name": "Graphite Paysage",
+      "description": "Graphite paysage est une entreprise proposant des services de rendus 3D, photomontage, ou dessin de vos projets paysage.",
+      "address": "11 chemin Neuf, 06410, Biot",
+      "email": "fiona@graphite-paysage.fr",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+33 7 60 23 43 51",
+        "contactType": "Customer service"
+      }
+    }
+    </script>
 </head>
 <body>
   <app-root></app-root>
