Ajout d'une image pour SEO, ajout des ALT pour les images. Maj Readme

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       "url": "http://www.graphite-paysage.fr",
       "name": "Graphite Paysage",
       "description": "Graphite paysage est une entreprise proposant des services de rendus 3D, photomontage, ou dessin de vos projets paysage.",
+      "image": "/assets/images/bg.jpg",
       "address": "11 chemin Neuf, 06410, Biot",
       "email": "fiona@graphite-paysage.fr",
       "contactPoint": {
