Ajout au schema

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     {
       "@context": "http://schema.org",
       "@type": "Organization",
-      "url": "http://www.graphite-paysage.fr",
+      "url": "https://www.graphite-paysage.fr",
       "name": "Graphite Paysage",
       "description": "Graphite paysage est une entreprise proposant des services de rendus 3D, photomontage, ou dessin de vos projets paysage.",
       "image": "/assets/images/bg.jpg",
@@ -24,6 +24,7 @@
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+33 7 60 23 43 51",
+        "email": "fiona@graphite-paysage.fr",
         "contactType": "Customer service"
       }
     }
